# SomethingLikeAn

./: .clang_complete  .gitignore  CMakeLists.txt  COPYING  README.md
src/: config.h.in  main.cpp
src/SLA/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  Camera.cpp  Camera.hpp  ClipSheet.cpp  ClipSheet.hpp  Collidable.hpp  CollisionLayer.cpp  CollisionLayer.hpp  Player.cpp  Player.hpp
